--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "jquery": "^2.1.4",
     "lodash": "^4.6.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "reactfire": "^0.6.0"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
