--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "lodash": "^4.6.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "reactfire": "^0.6.0"
+    "reactfire": "^0.6.0",
+    "sweetalert": "^1.1.3"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
