--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
     "browser-sync": "^2.7.6",
-    "browserify": "^10.1.2",
+    "browserify": "^10.2.6",
     "browserify-shim": "^3.8.6",
+    "chai": "^3.5.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.6.0",
+    "gulp-karma": "0.0.5",
     "gulp-minify-css": "^1.1.1",
     "gulp-minify-html": "^1.0.2",
     "gulp-sass": "^2.0.0",
@@ -35,10 +37,16 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
+    "karma": "^0.13.22",
+    "karma-browserify": "^5.0.3",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-mocha": "^0.2.2",
+    "mocha": "^2.4.5",
     "node-bourbon": "^4.2.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1"
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "babel-preset-react": "^6.5.0",
