--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browser-sync": "^2.7.6",
     "browserify": "^10.2.6",
@@ -71,7 +71,8 @@
   },
   "browserify": {
     "transform": [
-      "browserify-shim"
+      "browserify-shim",
+      "babelify"
     ]
   }
 }
